used h2 in-memory database to store data instead of static list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#Hiberate
+#To access H2 inmemory database GUI console
+spring.h2.console.enabled=true
+
+#DATA SOURCE CONFIGURATION
+spring.datasource.plateform=h2
+# temporary data storage
+spring.datasource.url=jdbc:h2:mem:nhstech
 
